# paladin

./: .buildinfo  .gitignore  README.md  api.html  environment.yml  example_propagate_cart.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  start.html
.doctrees/: api.doctree  environment.pickle  example_propagate_cart.doctree  index.doctree  start.doctree
_sources/: api.rst  index.rst  start.md
benchmark/: benchmark_pygsl_mee.py  benchmark_pygsl_nbody.py
dev/: dev_udp_custom_gradient.ipynb  solveivp_njit.py  test_multiple_shooting.py  test_propagator_nbody.py  test_snopt7.py  test_transformation.py
luna2/: __init__.py  _eom_scipy_nbody.py  _heyoka_nbody.py  _newtonraphson.py  _nodes_helper.py  _plotter.py  _propagator_cr3bp.py  _propagator_gsl_nbody.py  _propagator_nbody.py  _propagator_scipy_cr3bp.py  _propagator_scipy_nbody.py  _scipy_nbody.py  _symbolic_jacobians.py  _transformation.py  _udp_FullEphemerisTransition.py
notes/: full_ephemeris_transition.md  pygsl_setup.md
paladin/: _ODESolution.py  __init__.py  _algo_factory.py  _eom_mee.py  _eom_nbody.py  _eom_scipy_nbody.py  _gsl_event.py  _perturbations.py  _propagate_gsl.py  _propagator_gsl_mee.py  _propagator_gsl_nbody.py  _propagator_scipy_cr3bp.py  _propagator_scipy_nbody.py  _symbolic_jacobians.py  _transformation.py  _wrap_propagator.py
tests/: test_gsl_event.py  test_multiple_shooting.py  test_propagator_cr3bp.py  test_propagator_mee.py  test_propagator_nbody.py  test_propagator_nbody_earth.py  test_propagator_nrho.py  (+11 more)
(+21 files in other folders)
