[tool.poetry]
name = "paladin"
version = "0.1.3"
description = ""
authors = ["Yuri <yuri.shimane@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
matplotlib = "3.8.4"
scipy = "1.13"
spiceypy = "6.0.0"
sympy = ">=1.12"
numba = ">=0.54.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
